--- a/src/index.html
+++ b/src/index.html
@@ -2,34 +2,24 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Iebapp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <script type="text/javascript" src="https://www.boletobancario.com/boletofacil/wro/direct-checkout.min.js"></script>
-  
+    <meta charset="utf-8">
+    <title>Iebapp</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="https://www.boletobancario.com/boletofacil/wro/direct-checkout.min.js"></script>
+
 </head>
 
 <body style="background-image: url(assets/img/bg-body.jpg);">
-  <app-root></app-root>
-  <script type="text/javascript">
-    var checkout = new DirectCheckout('970969AAD6BB843AE46EFEAC3022022BC7C8856109F8CD7E8796C2969FEE423D', false);
-    /* Em sandbox utilizar o construtor new DirectCheckout('PUBLIC_TOKEN', false); */
-
-    window.generateHash = function (cardData) {
-      checkout.getCardHash(cardData,
-        function (cardHash) {
-          document.getElementById("cardHash").value = cardHash;
-          return cardHash;
-        },
-        function (error) {
-          document.getElementById("cardHashError").value = error;
-          return error;
-        });
-    };
-  </script>
+    <app-root></app-root>
+    <script type="text/javascript">
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    </script>
 </body>
 
 </html>
